--- a/larvel-pipeline.yml
+++ b/larvel-pipeline.yml
@@ -1,10 +1,12 @@
-name : backend-laravel-deployment-pipeline
-on : 
-  push : 
-    branches : 
+name: frontend-nextjs-deployment-pipeline
+
+on:
+  push:
+    branches:
+      - master
       - main
       - release/*
-    paths-ignore : 
+    paths-ignore:
       - '**/README.md'
       - '**/*.md'
       - '**/*.txt'
@@ -13,19 +15,40 @@ on :
       - '**/.dockerignore'
       - '**/LICENSE'
       - '**/*.lock'
-  pull_request : 
-    branches : 
+  pull_request:
+    branches:
+      - master
       - main
       - release/*
-  workflow_dispatch :
-    inputs :
-      ask_for_approval :
-        description : "Do you want to proceed with the deployment?"
-        required : true
-        default : "no"
-        type : choice
-        options :   
+  workflow_dispatch:
+    inputs:
+      ask_for_approval:
+        description: "Do you want to proceed with the deployment?"
+        required: true
+        default: "no"
+        type: choice
+        options:
           - "yes"
-          - "no" 
-jobs : 
-  runs-on: ubuntu-latest
+          - "no"
+
+jobs:
+  deploy_frontend:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm install --legacy-peer-deps
+
+      - name: Build Next.js application
+        run: npm run build
+
+      - name: Run tests
+        run: npm run test --if-present
